--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -3,10 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page Title</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Aclonica&family=Oregano&display=swap" rel="stylesheet">
+
+  <title>Ink Galaxy</title>
 </head>
 <body>
-  <!-- Your content goes here -->
+  <p>hihi</p>
   
   <script src="script.js"></script>
 </body>
