--- a/Project-1/gallery.html
+++ b/Project-1/gallery.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Aclonica&family=Oregano&display=swap" rel="stylesheet">
-  <title>Ink Galaxy</title>
+  <title>Ink Galaxy | Gallery</title>
 </head>
 <body>
   <!--navbar-->
