--- a/Project-1/loc+hours.html
+++ b/Project-1/loc+hours.html
@@ -9,13 +9,18 @@
 </head>
 <body>
   <!--navbar-->
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="artists.html">Artists</a></li>
-    <li><a href="loc+hours.html">Location & Hours</a></li>
-    <li><a href="gallery.html">Gallery</a></li>
-    <li><a href="booking.html">Book appointment</a></li>
-  </ul>
+  <nav>
+    <a href="index.html" class="logo-link">
+      <img src="logo.png" alt="Logo" class="logo-image">
+  </a>
+  <ul class="navbar">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="artists.html">Artists</a></li>
+      <li><a href="loc+hours.html">Location & Hours</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="booking.html">Book appointment</a></li>
+    </ul>
+  </nav>
 
   <p>hihi</p>
   
