--- a/Project-1/artists.html
+++ b/Project-1/artists.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Aclonica&family=Oregano&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="bottle.jpg">
   <title>Ink Galaxy | Artists</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
     </ul>
   </nav>
 
-  <p>hihi</p>
+  <p>artIST</p>
   
   <script src="script.js"></script>
 </body>
