--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Aclonica&family=Oregano&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="bottle.jpg">
   <title>Ink Galaxy</title>
 </head>
 <body>
@@ -14,11 +15,11 @@
       <img src="logo.png" alt="Logo" class="logo-image">
   </a>
   <ul class="navbar">
-      <li><a href="index.html" >Home</a></li>
-      <li><a href="artists.html" >Artists</a></li>
-      <li><a href="loc+hours.html" >Location & Hours</a></li>
-      <li><a href="gallery.html" >Gallery</a></li>
-      <li><a href="booking.html" >Book appointment</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="artists.html">Artists</a></li>
+      <li><a href="loc+hours.html">Location & Hours</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="booking.html">Book appointment</a></li>
     </ul>
   </nav>
 
