--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Aclonica&family=Oregano&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="bottle.jpg">
   <title>Ink Galaxy</title>
@@ -17,14 +18,44 @@
   <ul class="navbar">
       <li><a href="index.html">Home</a></li>
       <li><a href="artists.html">Artists</a></li>
-      <li><a href="loc+hours.html">Location & Hours</a></li>
+      <li><a href="loc+hours.html">Locations & Hours</a></li>
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="booking.html">Book appointment</a></li>
     </ul>
   </nav>
-
-  <p>hihi</p>
   
+  <!--Banner-->
+  <div class ="banner-home">
+    <div class="home-text">
+      <h1><strong>Ink Galaxy</strong></h1>
+      <h5><strong>Welcome to our cosmic atelier.
+        <br> 
+        Let our celestial artistry help you mark your passage through time.</strong></h5>
+    </div>
+  </div>
+  <!--About-->
+  <div>
+    <h3>About Us</h3>
+    <p>hihi</p>
+  </div>
+
+  <!--Contact-->
+  <div>
+    <h3>Contact Us</h3>
+    <p>hehe</p>
+  </div>
+
+  <!--Footer-->
+  <div class="footer">
+    <footer>
+      &copy; 2023 Ink Galaxy &nbsp;
+      <a href="https://instagr.am"><i class="fa fa-instagram"></i></a> &nbsp;
+      <a href="https://twitter.com"><i class="fa fa-twitter"></i></a>
+  </footer>
+  
+  </div>
+
+
   <script src="script.js"></script>
 </body>
 </html>
