--- a/Project-1/loc+hours.html
+++ b/Project-1/loc+hours.html
@@ -17,7 +17,7 @@
   <ul class="navbar">
       <li><a href="index.html">Home</a></li>
       <li><a href="artists.html">Artists</a></li>
-      <li><a href="loc+hours.html">Location & Hours</a></li>
+      <li><a href="loc+hours.html">Locations & Hours</a></li>
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="booking.html">Book appointment</a></li>
     </ul>
