--- a/Project-1/gallery.html
+++ b/Project-1/gallery.html
@@ -25,6 +25,14 @@
 
   <p>pretty pics i stole</p>
   
-  <script src="script.js"></script>
+  
+  <!--Footer-->
+  <div class="footer">
+    <footer>
+      &copy; 2023 Ink Galaxy &nbsp;
+      <a href="https://instagr.am"><i class="fa fa-instagram"></i></a> &nbsp;
+      <a href="https://twitter.com"><i class="fa fa-twitter"></i></a>
+    </footer>
+  </div>
 </body>
 </html>
