--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -10,7 +10,7 @@
   <script src="script.js"></script>
   <title>Ink Galaxy</title>
 </head>
-<body>
+<body class = "home">
   <!--navbar-->
   <nav>
     <a href="index.html" class="logo-link" >
@@ -34,16 +34,31 @@
         Let our celestial artistry help you mark your passage through time.</strong></h5>
     </div>
   </div>
+
   <!--About-->
   <div>
     <h3>About Us</h3>
-    <p>hihi</p>
+    <div class="about-text">
+      <p>Hello traveler ! We welcome you to our humble shop .  Our shop offers a selection of enchanting tattoos designed
+        by our artists .  These skilled artist can help you craft custom tattoos or recreate tattoos of your desires .  We
+        also provide guidance through consultations and aftercare instructions to preserve your divine markings .  
+        Let these ornaments serve as a wonderous narrator of your story or simply an expression of your whimsy .  Whether it's 
+        your first venture into this artistic world or you're a seasonned traveler, we hope you enjoy your visit here .</p>
+      <br>
+      <p>We started this shop as we believe that art is an amazing way to express yourself . . .  and we love the galaxy / deity theme .  
+        Whether it's with words,  symbols or illustrations, we believe all are magnificent manners to show your interests and tell your tales . 
+        Here at Ink Galaxy,  we'll try our absolute best to give you a fabulous experience and a bit of magic dust to go no matter the location you choose .
+      </p>
+    </div>
   </div>
-
+  
+  <br>
   <!--Contact-->
   <div>
     <h3>Contact Us</h3>
-    <p>hehe</p>
+    <div class="contact-text">
+      <p>hehe</p>
+    </div>
   </div>
 
   <!--Footer-->
