--- a/Project-1/booking.html
+++ b/Project-1/booking.html
@@ -13,8 +13,8 @@
   <nav>
     <a href="index.html" class="logo-link">
       <img src="logo.png" alt="Logo" class="logo-image">
-  </a>
-  <ul class="navbar">
+    </a>
+    <ul class="navbar">
       <li><a href="index.html">Home</a></li>
       <li><a href="artists.html">Artists</a></li>
       <li><a href="loc+hours.html">Locations & Hours</a></li>
@@ -24,7 +24,14 @@
   </nav>
 
   <p>book (toread;)</p>
-  
-  <script src="script.js"></script>
+
+  <!--Footer-->
+  <div class="footer">
+    <footer>
+      &copy; 2023 Ink Galaxy &nbsp;
+      <a href="https://instagr.am"><i class="fa fa-instagram"></i></a> &nbsp;
+      <a href="https://twitter.com"><i class="fa fa-twitter"></i></a>
+    </footer>
+  </div>
 </body>
 </html>
