re-format cuz bootstrap:(

--- a/Project-1/booking.html
+++ b/Project-1/booking.html
@@ -3,35 +3,56 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Aclonica&family=Oregano&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="bottle.jpg">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="script.js"></script>
   <title>Ink Galaxy | Booking</title>
 </head>
 <body>
-  <!--navbar-->
-  <nav>
-    <a href="index.html" class="logo-link">
-      <img src="logo.png" alt="Logo" class="logo-image">
-    </a>
-    <ul class="navbar">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="artists.html">Artists</a></li>
-      <li><a href="loc+hours.html">Locations & Hours</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="booking.html">Book appointment</a></li>
-    </ul>
-  </nav>
+  <div class = "book">
+    <!--navbar-->
+    <nav> 
+      <div class="col-md-8">
+        <ul class="navbar">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="artists.html">Artists</a></li>
+          <li><a href="loc+hours.html">Locations<br>& Hours</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="booking.html">Book<br>appointment</a></li>
+        </ul>
+      </div>
+      <div class="col-md-2">
+        <a href="index.html" class="logo-link" >
+          <img src="logo.png" alt="Logo" class="logo-image">
+        </a>
+      </div>
+    </nav>
+    
+    <!--Banner-->
+    <div class ="banner">
+      <div class="banner-text">
+        <h1><strong>Booking</strong></h1>
+        <h5><strong>Please fill in the needeed info</strong></h5>
+      </div>
+    </div>
 
-  <p>book (toread;)</p>
+       
+    <br>
+    <br>
 
-  <!--Footer-->
-  <div class="footer">
-    <footer>
-      &copy; 2023 Ink Galaxy &nbsp;
-      <a href="https://instagr.am"><i class="fa fa-instagram"></i></a> &nbsp;
-      <a href="https://twitter.com"><i class="fa fa-twitter"></i></a>
-    </footer>
+    <!--Footer-->
+    <div class="footer">
+      <footer>
+        &copy; 2023 Ink Galaxy &nbsp;
+        <a href="https://instagr.am"><i class="fa fa-instagram"></i></a> &nbsp;
+        <a href="https://twitter.com"><i class="fa fa-twitter"></i></a>
+      </footer>
+    </div>
   </div>
+</div> 
 </body>
 </html>
