--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -34,8 +34,8 @@
     </nav>
     
     <!--Banner-->
-    <div class ="banner-home">
-      <div class="home-text">
+    <div class ="banner">
+      <div class="banner-text">
         <h1><strong>Ink Galaxy</strong></h1>
         <h5><strong>Welcome to our cosmic atelier.</strong></h5>
         <h5><strong>Let our celestial artistry help you mark your passage through time.</strong></h5>
