--- a/Project-1/loc+hours.html
+++ b/Project-1/loc+hours.html
@@ -3,27 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Aclonica&family=Oregano&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="bottle.jpg">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="script.js"></script>
   <title>Ink Galaxy | Location & Hours</title>
 </head>
 <body>
-  <!--navbar-->
-  <nav>
-    <a href="index.html" class="logo-link">
-      <img src="logo.png" alt="Logo" class="logo-image">
-  </a>
-  <ul class="navbar">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="artists.html">Artists</a></li>
-      <li><a href="loc+hours.html">Locations & Hours</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="booking.html">Book appointment</a></li>
-    </ul>
-  </nav>
+  <div class = "loc">
+    <!--navbar-->
+    <nav> 
+      <div class="col-md-8">
+        <ul class="navbar">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="artists.html">Artists</a></li>
+          <li><a href="loc+hours.html">Locations<br>& Hours</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="booking.html">Book<br>appointment</a></li>
+        </ul>
+      </div>
+      <div class="col-md-2">
+        <a href="index.html" class="logo-link" >
+          <img src="logo.png" alt="Logo" class="logo-image">
+        </a>
+      </div>
+    </nav>
+    
+    <!--Banner-->
+    <div class ="banner">
+      <div class="banner-text">
+        <h1><strong>Locations & Hours</strong></h1>
+        <h5><strong>blep</strong></h5>
+      </div>
+    </div>
 
-  <p>locAtiON aNd hOURS</p>
+       
+    <br>
+    <br>
   
   
   <!--Footer-->
