--- a/Project-1/artists.html
+++ b/Project-1/artists.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Aclonica&family=Oregano&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="bottle.jpg">
+  <link rel="icon" type="image/x-icon" href="img/bottle.jpg">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="script.js"></script>
   <title>Ink Galaxy | Artists</title>
 </head>
 <body>
@@ -27,7 +26,7 @@
       </div>
       <div class="col-md-2">
         <a href="index.html" class="logo-link" >
-          <img src="logo.png" alt="Logo" class="logo-image">
+          <img src="img/logo.png" alt="Logo" class="logo-image">
         </a>
       </div>
     </nav>
@@ -35,16 +34,93 @@
     <!--Banner-->
     <div class ="banner">
       <div class="banner-text">
-        <h1><strong>Artitst</strong></h1>
-        <h5><strong>Here are our lovely ...people?</strong></h5>
+        <h1><strong>Artists</strong></h1>
+        <h5><strong>Click on your desired location to see which artists are available</strong></h5>
       </div>
     </div>
 
-       
+    <!--Click loc-->
+    <div class ="locationClick">
+      <div class ="row">
+        <div class ="col-md-6">
+          <a href="#ottawa">
+            <div class ="ottawaC">
+              <h2>Ottawa</h2>
+            </div>
+          </a>
+        </div>
+        <div class ="col-md-6">
+          <a href="#amsterdam">
+            <div class ="amsterdamC">
+              <h2>Amsterdam</h2>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class ="main">
+      <!--Ottawa-->
+      <section id="ottawa">
+        <h1>Ottawa</h1>
+        <div class ="row">
+          <div class="col-md-6">
+            <div class="card">
+              <div class="card-pfp">
+                <img class="pfp" src="img/pfp1.jpg"></img>
+              </div>
+              <div class="card-body">
+                <p class ="name">Panda</p>
+                <p>Instagram <a href="https://www.instagram.com/pandaclubs24/">@ThePanda</a></p>
+                <p>Twitter <a href="https://twitter.com/Panda_Reactions">@ThePanda</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card">
+              <div class="card-pfp">
+                <img class="pfp" src="img/pfp2.jpg"></img>
+              </div>
+              <div class="card-body">
+                <p class ="name">Red-y</p>
+                <p>Instagram <a href="https://www.instagram.com/the.random.panda25/">@RedPanda</a></p>
+                <p>Twitter <a href="https://twitter.com/ILoveRedPanda1">@RedPanda</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--Amsterdam-->
+      <section id="amsterdam">
+        <h1>Amsterdam</h1>
+        <div class ="row">
+          <div class="col-md-6">
+            <div class="card">
+              <div class="card-pfp">
+                <img class="pfp" src="img/pfp3.jpg"></img>
+              </div>
+              <div class="card-body">
+                <p class ="name">Foxy</p>
+                <p>Instagram <a href="https://www.instagram.com/foxeshuk/">@FunnecFox</a></p>
+                <p>Twitter <a href="https://twitter.com/fenex_osaka">@FunnecFox</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card">
+              <div class="card-pfp">
+                <img class="pfp" src="img/pfp4.jpg"></img>
+              </div>
+              <div class="card-body">
+                <p class ="name">Winter</p>
+                <p>Instagram <a href="https://www.instagram.com/fox.passions/">@ColdFox</a></p>
+                <p>Twitter <a href="https://twitter.com/Wolfloversworld">@ColdFox</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
     <br>
-    <br>
-  
-  
   <!--Footer-->
   <div class="footer">
     <footer>
