--- a/Project-1/loc+hours.html
+++ b/Project-1/loc+hours.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Aclonica&family=Oregano&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="bottle.jpg">
+  <link rel="icon" type="image/x-icon" href="img/bottle.jpg">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="script.js"></script>
   <title>Ink Galaxy | Location & Hours</title>
 </head>
 <body>
@@ -27,7 +26,7 @@
       </div>
       <div class="col-md-2">
         <a href="index.html" class="logo-link" >
-          <img src="logo.png" alt="Logo" class="logo-image">
+          <img src="img/logo.png" alt="Logo" class="logo-image">
         </a>
       </div>
     </nav>
@@ -38,12 +37,111 @@
         <h1><strong>Locations & Hours</strong></h1>
       </div>
     </div>
+    <br>
 
-       
-    <br>
-    <br>
-  
-  
+    <div class ="row" id ="row-card">
+      <!--Ottawa location-->
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3 class="card-title">Ottawa</h3>
+          </div>
+          <div class="card-map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2275.412317971499!2d-75.68063448453911!3d45.42089417454545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce05a74fac7013%3A0xdd970143f43eb9b5!2sS.I.T.E.%20School%20of%20Information%20Technology%20and%20Engineering%20Building!5e0!3m2!1sen!2sca!4v1686575475775!5m2!1sen!2sca" width="97%" height= "250" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+          <div class="card-body">
+            <h5 class="address">800 King Edward Ave, Ottawa, ON K1N 6N5</h5>
+            <h5 class="phone">+1 (613)-562-5800</h5>
+            <br>
+            <h4 class="address">Hours</h4>
+            <table class="table table-borderless">
+              <tbody>
+                <tr>
+                  <td>Monday</td>
+                  <td>9 AM - 10PM</td>
+                </tr>
+                <tr>
+                  <td>Tuesday</td>
+                  <td>9 AM - 10PM</td>
+                </tr>
+                <tr>
+                  <td>Wednesday</td>
+                  <td>9 AM - 10PM</td>
+                </tr>
+                <tr>
+                  <td>Thursday</td>
+                  <td>9 AM - 10PM</td>
+                </tr>
+                <tr>
+                  <td>Friday</td>
+                  <td>9 AM - 10PM</td>
+                </tr>
+                <tr>
+                  <td>Saturday</td>
+                  <td>10 AM - 11PM</td>
+                </tr>
+                <tr>
+                  <td>Sunday</td>
+                  <td>1 AM - 11PM</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>  
+
+      <!--Amsterdam location-->
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3 class="card-title">Amsterdam</h3>
+          </div>
+          <div class="card-map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d466.92641002634673!2d4.895772956914674!3d52.37171184025028!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c60954ef823f63%3A0x73738f27a7170b6f!2sThe%20Rubber%20Duck%20Store%20Amsterdam!5e0!3m2!1sen!2sca!4v1686579870770!5m2!1sen!2sca" width="97%" height="250" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+          <div class="card-body">
+            <h5 class="address">Oude Doelenstraat 2, 1012 ED Amsterdam, Netherlands</h5>
+            <h5 class="phone">+31 (6) 47196776</h5>
+            <br>
+            <h4 class="address">Hours</h4>
+            <table class="table table-borderless">
+              <tbody>
+                <tr>
+                  <td>Monday</td>
+                  <td>10 AM - 10PM</td>
+                </tr>
+                <tr>
+                  <td>Tuesday</td>
+                  <td>10 AM - 10PM</td>
+                </tr>
+                <tr>
+                  <td>Wednesday</td>
+                  <td>10 AM - 10PM</td>
+                </tr>
+                <tr>
+                  <td>Thursday</td>
+                  <td>10 AM - 10PM</td>
+                </tr>
+                <tr>
+                  <td>Friday</td>
+                  <td>10 AM - 10PM</td>
+                </tr>
+                <tr>
+                  <td>Saturday</td>
+                  <td>10 AM - 11PM</td>
+                </tr>
+                <tr>
+                  <td>Sunday</td>
+                  <td>1 AM - 11PM</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>     
+  </div>
+  <br>
+      <br>
   <!--Footer-->
   <div class="footer">
     <footer>
