--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Aclonica&family=Oregano&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="bottle.jpg">
+  <link rel="icon" type="image/x-icon" href="img/bottle.jpg">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="script.js"></script>
   <title>Ink Galaxy</title>
 </head>
 <body>
@@ -27,7 +26,7 @@
       </div>
       <div class="col-md-2">
         <a href="index.html" class="logo-link" >
-          <img src="logo.png" alt="Logo" class="logo-image">
+          <img src="img/logo.png" alt="Logo" class="logo-image">
         </a>
       </div>
     </nav>
@@ -38,6 +37,8 @@
         <h1><strong>Ink Galaxy</strong></h1>
         <h5><strong>Welcome to our cosmic atelier.</strong></h5>
         <h5><strong>Let our celestial artistry help you mark your passage through time.</strong></h5>
+        <br>
+        <a id = "button1" class="btn btn-primary" href="booking.html">Book Now</a>
       </div>
     </div>
 
