--- a/Project-1/booking.html
+++ b/Project-1/booking.html
@@ -43,6 +43,7 @@
         <h5><strong>* *  Please enter the needeed information  * *</strong></h5>
       </div>
     </div>
+    <div id="notification"></div>
     <!--Form for info-->
     <form>
       <div class="row" id ="row-card">
@@ -77,24 +78,41 @@
               </div>
               <div class="form-group">
                 <label for="artist">Artist:</label>
-                <select class="form-control" id="artist">
-                  <option value="">Select artist</option>
+                <select class="form-control" id="artist" disabled>
+                    <option value="">Select artist</option>
                 </select>
-              </div>
+              </div>         
             </div>
             <div class="col-md-6">
               <div class="form-group">
                 <label for="date">* Date:</label>
                 <input type="text" class="form-control" id="date" placeholder="Select a date">
+              </div>  
+              <div class="form-group">
+                <label for="location">* Time:</label>
+                <select class="form-control" id="time">
+                  <option value="">Select Hour</option>
+                  <option value="10:00 am">10:00 am</option>
+                  <option value="11:00 am">11:00 am</option>
+                  <option value="12:00 am">12:00 am</option>
+                  <option value="1:00 pm">1:00 pm</option>
+                  <option value="2:00 pm">2:00 pm</option>
+                  <option value="3:00 pm">3:00 pm</option>
+                  <option value="4:00 pm">4:00 pm</option>
+                  <option value="5:00 pm">5:00 pm</option>
+                  <option value="6:00 pm">6:00 pm</option>
+                  <option value="7:00 pm">7:00 pm</option>
+                  <option value="8:00 pm">8:00 pm</option>
+                  <option value="9:00 pm">9:00 pm</option>
+                </select>
               </div>
-            </div>
+            </div> 
           </div>
         </div>
       </div>
       <br>
       <button id="button1" type="submit" class="btn btn-primary">Submit</button>
-    </form>    
-       
+    </form>      
     <br>
     <br>
 
@@ -107,55 +125,6 @@
       </footer>
     </div>
   </div>
-</div> 
+</div> <script src="book.js"></script>
 </body>
 </html>
-
-<script>
-  // calendar
-  $(document).ready(function() {
-    $('#date').datepicker({
-      format: 'yyyy-mm-dd',
-      autoclose: true
-    });
-  });
-
-  // for dropdown
-  //get elems
-  const locDropdown = document.getElementById('location');
-    const artistDropdown = document.getElementById('artist');
-
-    // artists by loc
-    const artistsLoc = {
-      ottawa: ['Panda', 'Red-y'],
-      amsterdam: ['Foxy', 'Winter']
-    };
-
-    // update artist dropdown
-    function updateArtistOpts() {
-      const selectLoc = locDropdown.value;
-      artistDropdown.innerHTML = ''; // clear opts
-
-      if (selectLoc) {
-        const artists = artistsLoc[selectLoc];
-        artists.forEach(artist => {
-          const option = document.createElement('option');
-          option.value = artist;
-          option.textContent = artist;
-          artistDropdown.appendChild(option);
-        });
-      } else {
-        // default select text
-        const option = document.createElement('option');
-        option.value = '';
-        option.textContent = 'Select artist';
-        artistDropdown.appendChild(option);
-      }
-    }
-
-    // update artist opts when loc selected
-    locDropdown.addEventListener('change', updateArtistOpts);
-
-    // artist opts based loc
-    updateArtistOpts();
-</script>
